feat: Implement unified product families, variant grouping, and WAC tracking
This commit fully implements the Phase 4 Unified Search & Variant Grouping roadmap, enhancing both the UI's capability to cleanly handle multi-variant products and the backend's financial precision regarding blended inventory costs.

Backend:
- Implemented dynamic Weighted Average Cost (WAC) snapshots in `VentaService` for sales, with a precise fallback to the selected variant's cost when system stock reaches zero.
- Added a "Phantom Location" safety net that gracefully catches sales forced on products completely missing from the stock table, securely recording negative stock in the first valid system location.
- Introduced strict "Merge Blocks" in `ProductService` to prevent users from accidentally changing a product's code to match an unrelated, pre-existing family.
- Cascaded description, retail price, and wholesale price updates to all active sibling variants when one variant is modified.
- Improved the `ProductRepository.search()` algorithm to prioritize variants with active positive stock over empty variants in search results.
- Updated `schema.sql` to exclude the generic '1' bucket from strict variant uniqueness checks, preventing collisions on disparate generic items.

Frontend:
- Redesigned the `VentaPage` POS grid to group multi-variant products into single family rows, introducing an expandable inline variant picker for streamlined variant selection.
- Applied subtle visual groupings (teal accents) to sibling variants on the `InventarioPage`.
- Upgraded the `ProductFormModal` into a "Smart Form" that auto-fetches family descriptions/prices when a recognized code is entered, locking appropriate fields to ensure data consistency.
- Resolved edge-case UI bugs regarding duplicate error toasts and disabled input listeners during edit mode.

Testing & Reliability:
- Expanded backend unit testing across `ProductRepository`, `ProductService`, and `VentaService` to cover WAC edge cases, P